[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/gameplay/GameOverScene.gd" id="1"]

[node name="GameOverScene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="BG" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.03, 0.03, 1)

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 12

[node name="TitleLabel" type="Label" parent="Margin/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 34
text = "Game Over"

[node name="SummaryLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
autowrap_mode = 3
text = "You were defeated."

[node name="Separator" type="HSeparator" parent="Margin/VBox"]
layout_mode = 2

[node name="LoadRow" type="HBoxContainer" parent="Margin/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SaveSlotOption" type="OptionButton" parent="Margin/VBox/LoadRow"]
unique_name_in_owner = true
layout_mode = 2

[node name="LoadButton" type="Button" parent="Margin/VBox/LoadRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Load Save"

[node name="RestartButton" type="Button" parent="Margin/VBox/LoadRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Restart Run"

[node name="WorldButton" type="Button" parent="Margin/VBox/LoadRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Return To World"

[node name="StatusLabel" type="Label" parent="Margin/VBox"]
unique_name_in_owner = true
layout_mode = 2
text = ""

